--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@angular/compiler": "7.2.5",
     "@angular/core": "7.2.5",
     "@angular/forms": "7.2.5",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "7.2.5",
     "@angular/platform-browser-dynamic": "7.2.5",
     "@angular/router": "7.2.5",
     "core-js": "2.6.5",
     "rxjs": "6.4.0",
-    "rxjs-compat": "^6.5.1",
+    "rxjs-compat": "6.5.1",
     "zone.js": "0.8.29"
   },
   "scripts": {
